# discord-cocobot

./: .editorconfig  .env.example  .flake8  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG  CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.md  DEPLOYMENT_DEVELOPMENT.md  DEVELOPER_GUIDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  LICENSE  README.md  bot.py  check_security.py  cocobot.db  deploy-as-service.sh  deploy.sh  deploy_docker.sh  deploy_script.sh  docker-compose.yml  init.sql  off.sh  on.sh  output.txt  pyproject.toml  pytest.ini  requirements.txt  requirements_minimal.txt  setup.cfg  test_start_jail.py
.clavix/: config.json
.github/: dependabot.yml
.run/: Cocobot.run.xml
assets/: cocobot-introduction.md
cogs/: __init__.py  _translate.py  admin.py  command.py.txt  exchangerate.py  jail.py  learn.py  locate.py  pollution.py  quiz.py  summarize.py  time.py  translate.py  transliterate.py  warn.py  weather.py
config/: __init__.py  app_config.py  config.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_DOCKER.md  DEPLOYMENT_PRODUCTION.md  SECURITY.md
scripts/: dependency_audit.py  deploy-as-docker.sh  deploy-as-service.sh
tests/: __init__.py  conftest.py  test_bot.py  test_database.py  test_exceptions.py  test_exchangerate.py  test_jail.py  test_learn.py  test_locate.py  test_pollution.py  test_security.py  test_summarize.py  test_time.py  test_translate.py  test_transliterate.py  test_utils.py  test_warn.py  test_weather.py
utils/: __init__.py  cache.py  database.py  exceptions.py  helpers.py  logger.py  monitoring.py  rate_limit.py  security.py
(+20 files in other folders)
